updated documentation for company
